Actualizacion del propertis agregando variables de entorni, de la reniec y actualizando seguridad