@@ -20,7 +20,6 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
-import java.util.List;
 
 /**
  * Configuración de seguridad de Spring Security.
@@ -45,108 +44,76 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
-                // ✅ AGREGAR ESTA LÍNEA: Habilitar CORS
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-                // Deshabilitar CSRF (no necesario para API REST con JWT)
-                .csrf(csrf -> csrf.disable())
-
-                // Configurar manejo de excepciones
-                .exceptionHandling(exception -> exception
-                        .authenticationEntryPoint(jwtAuthenticationEntryPoint)
-                )
-
-                // Configurar sesión stateless (sin sesiones)
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
-                // Configurar autorización de endpoints
-                .authorizeHttpRequests(auth -> auth
-                        // Endpoints públicos (sin autenticación)
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/api/public/**").permitAll()
-
-                        // ✅ AGREGAR ESTA LÍNEA: Permitir preflight requests (OPTIONS)
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-
-                        // Swagger/OpenAPI (si está configurado)
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
-
-                        // Endpoints de administración (solo ADMIN)
-                        .requestMatchers("/api/usuarios/**").hasRole("ADMINISTRADOR")
-                        .requestMatchers("/api/roles/**").hasRole("ADMINISTRADOR")
-                        .requestMatchers(HttpMethod.DELETE, "/api/**").hasRole("ADMINISTRADOR")
-
-                        // Endpoints de ventas (ADMIN y VENDEDOR)
-                        .requestMatchers("/api/ventas/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
-                        .requestMatchers("/api/clientes/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
-
-                        // Endpoints de productos (todos autenticados)
-                        .requestMatchers(HttpMethod.GET, "/api/productos/**").authenticated()
-                        .requestMatchers(HttpMethod.POST, "/api/productos/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
-                        .requestMatchers(HttpMethod.PUT, "/api/productos/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
-
-                        // Reportes (todos los roles autenticados)
-                        .requestMatchers("/api/reportes/**").authenticated()
-
-                        // Cualquier otra petición requiere autenticación
-                        .anyRequest().authenticated()
-                )
-
-                // Agregar filtro JWT antes del filtro de autenticación por defecto
-                .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .csrf(csrf -> csrf.disable())
+            .exceptionHandling(exception -> exception
+                .authenticationEntryPoint(jwtAuthenticationEntryPoint)
+            )
+            .sessionManagement(session -> session
+                .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            )
+            .authorizeHttpRequests(auth -> auth
+                .requestMatchers("/api/auth/**").permitAll()
+                .requestMatchers("/api/public/**").permitAll()
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                .requestMatchers("/swagger-ui/**", "/v3/api-docs/**").permitAll()
+                .requestMatchers("/api/usuarios/**").hasRole("ADMINISTRADOR")
+                .requestMatchers("/api/roles/**").hasRole("ADMINISTRADOR")
+                .requestMatchers(HttpMethod.DELETE, "/api/**").hasRole("ADMINISTRADOR")
+                .requestMatchers("/api/ventas/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
+                .requestMatchers("/api/clientes/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
+                .requestMatchers(HttpMethod.GET, "/api/productos/**").authenticated()
+                .requestMatchers(HttpMethod.POST, "/api/productos/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
+                .requestMatchers(HttpMethod.PUT, "/api/productos/**").hasAnyRole("ADMINISTRADOR", "VENDEDOR")
+                .requestMatchers("/api/reportes/**").authenticated()
+                .anyRequest().authenticated()
+            )
+            .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
 
     /**
-     * ✅ AGREGAR ESTE MÉTODO: Configuración CORS para permitir requests desde el frontend
+     * Configuración de CORS para permitir peticiones desde el frontend
      */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-
-        // Orígenes permitidos (tu frontend)
-        configuration.setAllowedOriginPatterns(List.of(
-                "http://localhost:3000",
-                "http://localhost:3001",
-                "http://127.0.0.1:3000"
+        
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000",
+            "http://localhost:3001",
+            "http://localhost:4200",
+            "http://127.0.0.1:3000",
+            "http://192.168.0.100:3000"
         ));
-
-        // Métodos HTTP permitidos
+        
         configuration.setAllowedMethods(Arrays.asList(
-                "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
+            "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
-
-        // Headers permitidos
+        
         configuration.setAllowedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Requested-With",
-                "Accept",
-                "Origin",
-                "Access-Control-Request-Method",
-                "Access-Control-Request-Headers",
-                "X-Auth-Token"
+            "Authorization",
+            "Content-Type",
+            "X-Requested-With",
+            "Accept",
+            "Origin",
+            "Access-Control-Request-Method",
+            "Access-Control-Request-Headers",
+            "X-Auth-Token"
         ));
-
-        // Headers expuestos en la respuesta
+        
         configuration.setExposedHeaders(Arrays.asList(
-                "Authorization",
-                "Content-Type",
-                "X-Total-Count",
-                "Content-Disposition"
+            "Authorization",
+            "Content-Type",
+            "X-Total-Count",
+            "Content-Disposition"
         ));
-
-        // Permitir credenciales (necesario para tokens)
+        
         configuration.setAllowCredentials(true);
-
-        // Tiempo de cache para preflight requests (1 hora)
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        // Aplicar a todas las rutas de la API
         source.registerCorsConfiguration("/**", configuration);
 
         return source;
@@ -154,11 +121,10 @@ public class SecurityConfig {
 
     /**
      * Bean para encriptar contraseñas con BCrypt
-     * RNF-002.1: Encriptación con BCrypt (mínimo 10 saltos)
      */
     @Bean
     public BCryptPasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder(10); // 10 saltos
+        return new BCryptPasswordEncoder(10);
     }
 
     /**
